--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -20,5 +20,8 @@ jobs:
           java-version: "17"
           cache: sbt
 
+      - name: Set up sbt
+        uses: sbt/setup-sbt@v1
+
       - name: Run unit tests
         run: sbt -v test
