CI: test on Java 17+ (17/21) and standardize Arrow memory + scoped tests

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -8,6 +8,10 @@ on:
 jobs:
   test:
     runs-on: ubuntu-latest
+    strategy:
+      fail-fast: true
+      matrix:
+        java: ["17", "21"]
 
     steps:
       - name: Checkout
@@ -17,7 +21,7 @@ jobs:
         uses: actions/setup-java@v4
         with:
           distribution: temurin
-          java-version: "17"
+          java-version: ${{ matrix.java }}
           cache: sbt
 
       - name: Set up sbt
